# stack_detector

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
include/stack_detector/: stack_detector_node.hpp
launch/: stack_detector.launch.py
src/: stack_detector_main.cpp  stack_detector_node.cpp
stack_detector/: stack_detector_node.py
